<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CamTestActivity!</string>
    <string name="app_name">SAScanCharger</string>

    <string name="title_activity_activate">Activate</string>
    <string name="txtNombreApp">SA Scan Charger</string>
    <string name="btnActivate">Activar aplicación</string>
    <string name="btnClose">Cerrar</string>
    <string name="txtCodigo">Codigo de activación:</string>
    <string name="txtCaracteristicas">Para activar la aplicación deberá solicitar un código, transfiriendo exactamente 0.40 CUC a SurfaceSoft.com</string>
    <string name="txtWarning">Importante: SurfaceSoft.com utiliza el monto transferido para identificar su App. \n SurfaceSoft.com no se responsabiliza si UD. transfiere una cantidad diferente a 0.40 CUC.</string>
    <string name="btnSolicitarCod">Solicitar Código Ahora</string>
    
    <!-- UI Elements -->
    <string name="btn_capture">Click</string>
    <string name="btn_capture_desc">Mantener presionado para enfocar la cámara</string>
    
    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="verifying_title">Verifique el código antes de recargar: \n (corríjalo si es necesario)</string>
    <string name="verifying_accept_button">RECARGAR</string>
    <string name="verifying_cancel_button">CANCELAR</string>

    <string name="title_activity_charge">Charge</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_settings_desc">Realice ajustes a la aplicación según sus necesidades y preferencias</string>
    <string name="setting_about">Acerca de ...</string>
    <string name="setting_about_desc">Consulte información acerca de la compañia que desarrolla SA Scan Charger</string>
    <string name="setting_activate">Activar app</string>
    <string name="setting_activate_desc">Active la aplicación para poder utilizar todas sus funcionalidades</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="intro">App Intro</string>

    <!--Slide 1-->
    <string name="title_slide_1">SA Scan Charger</string>
    <string name="desc_slide_1">Recargue su linea de CUBACEL con la cámara de su smartphone</string>

    <!--Slide 2-->
    <string name="title_slide_2">Cupón de Recarga</string>
    <string name="desc_slide_2">Raspe y limpie bien el código de recarga</string>
    <string name="desc_slide_2_2">Evite extrujar, doblar, escribir la tarjeta o provocar daños al código de recarga</string>

    <!--Slide 3-->
    <string name="title_slide_3">Iluminación y Enfoque</string>
    <string name="desc_slide_3">Propicie una adecuada iluminación y enfoque de la cámara, antes de realizar la recarga</string>

    <!--Slide 4-->
    <string name="title_slide_4">Verificar Código y Recargar</string>
    <string name="desc_slide_4">Verifique y corrija el código si es necesario, antes de realizar la recarga</string>

    <string name="title_activity_about">ACERCA DE ...</string>
    <string name="about_title">SA Scan Charger 1.0</string>
    <string name="about_explain">Una app para recargar el móvil usando la cámara del smartphone\n\nHáganos llegar su opinión.</string>
    <string name="about_email">Email:</string>
    <string name="about_email_url">surfacesoft15@gmail.com</string>
    <string name="about_rights">Copyright 2015 \u00a9 SurfaceSoft \nAll Rights Reserved</string>

    <string name="title_activity_configure_phone_number">ConfigurePhoneNumber</string>
    <string name="txtExplainConfigurePhone">SA Scan Charger necesita su número de linea móvil para activar la app y no puede identificarlo \n\nPor favor, introduzca los 8 dígitos de su número de móvil \n(sin +53, ni ningún otro prefijo)</string>
    <string name="txtNoteTextConfigurePhone">Importante: La aplicación podría funcionar de forma incorrecta si no posee su número de móvil.</string>
    <string name="txtPhoneConfigure">Número de móvil:</string>
    <string name="btnConfigure">Configurar</string>
</resources>