<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.surfacesoft.yaj.satransferui.Activate">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/color_blue"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/txtNombreApp"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llImageLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_below="@id/title"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:padding="10dp"
                android:src="@mipmap/ic_high_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/txtCaracteristicas"
                android:textColor="@color/color_black"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtWarning"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/btnSolicitarCod"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_rounded_grey"
                android:onClick="solicitarActivacion"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/btnSolicitarCod"
                android:textColor="@color/color_white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActivacion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_below="@id/llImageLogo"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/txtCodigo"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/etCodigo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/color_black"
                android:ellipsize="start"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnActivate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@drawable/button_rounded_blue"
                android:onClick="activateApp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/btnActivate"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded_grey"
            android:onClick="closeWindows"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/btnClose"
            android:textSize="14sp"
            android:textColor="@color/color_white" />
    </LinearLayout>
</LinearLayout>