<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.surfacesoft.yaj.satransferui.ConfigurePhoneNumber">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/color_blue"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/txtNombreApp"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:color/transparent"
            android:onClick="closeWindows"
            android:src="@mipmap/ic_chevron_left_white_48dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:padding="10dp"
            android:src="@mipmap/ic_high_launcher" />

        <TextView
            android:id="@+id/tvExplainConfigurePhone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txtExplainConfigurePhone"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txtNoteTextConfigurePhone"
            android:textColor="@color/color_black"
            android:textSize="10sp"
            android:textStyle="italic|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPhoneConfigure2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/txtPhoneConfigure"
                android:textColor="@color/color_black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhoneConfigure2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:inputType="phone"
                android:maxLength="8"
                android:padding="5dp"
                android:textColor="@color/color_black" />

            <Button
                android:id="@+id/btnPhoneConfigure2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded_blue"
                android:onClick="actionConfigurePhone"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/btnConfigure"
                android:textColor="@color/color_white"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>