<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:layout_weight="10"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:layout_weight="2"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:paddingRight="32dp"
        android:textSize="28sp"
        android:text="@string/title_slide_2"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:src="@mipmap/ic_raspar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:textSize="16sp"
            android:text="@string/desc_slide_2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@mipmap/ic_estrujar"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:textSize="16sp"
        android:text="@string/desc_slide_2_2"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>