<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.surfacesoft.yaj.sascancharger.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#0000" />


        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:onClick="hideToggleMenu"
            android:src="@mipmap/ic_btn_show" />

        <ImageButton
            android:id="@+id/btnCapture"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/button_shutter_grey"
            android:padding="0dp"
            android:src="@mipmap/ic_cam_shutter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_capture_desc"
            android:textSize="10sp"
            android:paddingBottom="12px"
            android:textStyle="italic"
            android:textColor="#CCFFFFFF"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center"/>

        <RelativeLayout
            android:id="@+id/infoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/verifying_charge_code_area"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/loadingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="150dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="@xml/progress_bar_style"
                    android:indeterminateDrawable="@xml/progress_bar_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chargingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/verifying_title"
                    android:textColor="@color/color_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/chargeCode"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:maxLength="16"
                    android:text="8000 5000 3000 9000"
                    android:textColor="@color/color_blue"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangulo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:height="40dp"
                        android:background="@drawable/button_rounded_grey"
                        android:onClick="closeView"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/verifying_cancel_button"
                        android:textColor="@color/color_white"
                        android:textSize="12sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:height="40dp"
                        android:background="@drawable/button_rounded_blue"
                        android:onClick="recharge"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/verifying_accept_button"
                        android:textColor="@color/color_white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grey_a_pressed"
        android:layout_x="-50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/grey_a_pressed"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchActivate"
                android:background="@drawable/button_options_grey"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnActivate"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_options_grey"
                    android:padding="5dp"
                    android:onClick="launchActivate"
                    android:src="@mipmap/ic_btn_activate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/setting_activate"
                        android:textColor="@color/color_white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="15dp"
                        android:paddingRight="40dp"
                        android:text="@string/setting_activate_desc"
                        android:textColor="@color/color_white"
                        android:textStyle="italic"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchSetting"
                android:background="@drawable/button_options_grey"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSetting"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_options_grey"
                    android:padding="5dp"
                    android:onClick="launchSetting"
                    android:src="@mipmap/ic_btn_settings" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/action_settings"
                        android:textColor="@color/color_white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="15dp"
                        android:paddingRight="40dp"
                        android:text="@string/action_settings_desc"
                        android:textColor="@color/color_white"
                        android:textStyle="italic"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAbout"
                android:background="@drawable/button_options_grey"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAbout"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_options_grey"
                    android:padding="5dp"
                    android:onClick="launchAbout"
                    android:src="@mipmap/ic_btn_about" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/setting_about"
                        android:textColor="@color/color_white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="15dp"
                        android:paddingRight="40dp"
                        android:text="@string/setting_about_desc"
                        android:textColor="@color/color_white"
                        android:textStyle="italic"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/line"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnMenuClose"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="hideToggleMenu"
            android:src="@mipmap/ic_btn_hide" />

    </RelativeLayout>
</FrameLayout>